Bug 516712 - Network tray icon incorrectly shows disconnection state when using a bridge via nmcli (Plasma 6.6.1 regression)
Summary: Network tray icon incorrectly shows disconnection state when using a bridge v...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Networking in general (other bugs)
Version First Reported In: 6.6.1
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Nate Graham
URL:
Keywords: regression
: 516827 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-02-25 12:27 UTC by Zesko
Modified: 2026-03-14 06:46 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.2
Sentry Crash Report:


Attachments
Screenshot (31.26 KB, image/jpeg)
2026-02-25 12:27 UTC, Zesko
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Zesko 2026-02-25 12:27:48 UTC
Created attachment 190092 [details]
Screenshot

SUMMARY

On Plasma 6.6.1, the network tray icon on the KDE panel incorrectly shows a disconnection state when using a network bridge via nmcli.
I tested this with a fresh KDE user profile (default config, no old cache) and the issue persists.
I booted a previous snapshot with Plasma 6.6.0 that shows correct connection state.

STEPS TO REPRODUCE

1. Follow the Arch Wiki guide: https://wiki.archlinux.org/title/Network_bridge#With_NetworkManager_2
2. Use nmcli to create a new bridge network that connects directly to your router instead of using NAT on the host. (Required for KVM, it works fine without connection issues.)
3. Upgrade from Plasma 6.6.0 to 6.6.1.
4. Notice the network tray icon showing a disconnection state.

OBSERVED RESULT

The network tray icon on the KDE panel shows an unexpected disconnection icon in Plasma 6.6.1.

EXPECTED RESULT

The network tray icon should show a connected state, as it did correctly in Plasma 6.6.0.


Operating System: Arch Linux
KDE Plasma Version: 6.6.1
KDE Frameworks Version: 6.23.0
Qt Version: 6.10.2
Graphics Platform: Wayland
Comment 1 Nate Graham 2026-02-25 14:40:21 UTC
It's likely this got broken by me in https://invent.kde.org/plasma/plasma-nm/-/commit/e85e1c0466b30b8d291d7765675044ad3c0fbf92, which changed the icon for the "I'm a disconnected wired network" case from network-wired-available to network-wired-disconnected. This is semantically correct for being a disconnection icon, so if that's what's going on, the problem is that we're in "I'm disconnected" code in the first place.

This is bumping up against the limits of my networking knowledge. Can you walk me through how to create a bridge connection that reproduces the issue so I can investigate?
Comment 2 Zesko 2026-02-25 14:59:41 UTC
> This is bumping up against the limits of my networking knowledge. Can you
> walk me through how to create a bridge connection that reproduces the issue
> so I can investigate?

@Nate Graham

Thanks for the quick reply.

1. Create a new bridge device using nmcli (NetworkManager CLI)
```
nmcli connection add type bridge ifname "br0" stp no
```

2. run "ip -c addr" to check your ethernet interface name (for example: enp30s0).
then add it as a bridge slave:
```
nmcli connection add type bridge-slave ifname enp30s0 master br0
```

3. disconnect your current LAN connection in NetworkManager GUI or CLI (you’ll switch from LAN to the bridge):
```
nmcli connection down "<your current LAN connection name>"
```

4. bring up the new bridge:
```
nmcli connection up bridge-br0
nmcli connection up bridge-slave-enp30s0
```
Comment 3 Nate Graham 2026-02-25 17:44:58 UTC
Can I do this without an ethernet connection? How do I remove it after testing?
Comment 4 Zesko 2026-02-25 17:51:00 UTC
(In reply to Nate Graham from comment #3)
> Can I do this without an ethernet connection? 

No, the bridge needs an actual ethernet interface (LAN) to work. It won't do anything without it.


> How do I remove it after testing?

Yes, run:
```
nmcli connection down bridge-br0
nmcli connection down bridge-slave-enp30s0
nmcli connection up <your LAN connection name>
```
This will take the bridge down and bring your original LAN connection back up.
Comment 5 username 2026-02-25 17:53:18 UTC
nmcli con del bridge-br0
nmcli con del bridge-slave-enp30s0
Comment 6 Nate Graham 2026-02-25 18:05:11 UTC
Hmm, ok, I'll have to fly blind.

I assume before Plasma 6.6.1 the icon was a monitor with a wire, and that wire was blue, right?
Comment 7 Zesko 2026-02-25 18:18:03 UTC
(In reply to Nate Graham from comment #6)
> I assume before Plasma 6.6.1 the icon was a monitor with a wire, and that wire was blue, right?

Yes, see the screenshot: https://ibb.co/bgYDGBHZ
this is what the icon with the blue wire looked in Plasma 6.6.0 from the previous snapshot.
Comment 8 Zesko 2026-02-25 18:20:30 UTC
I forgot to mention, I’m using the default icons, Breeze Dark. No custom ones.
Comment 9 Nate Graham 2026-02-25 18:23:07 UTC
*** Bug 516709 has been marked as a duplicate of this bug. ***
Comment 10 Nate Graham 2026-02-25 18:23:26 UTC
Ok, I found a USB to ethernet adapter and can reproduce the issue with your steps to create a bridge network. They were very helpful, thanks!

And indeed the old icon was a monitor with a blue wire. Investigating.
Comment 11 Nate Graham 2026-02-25 18:30:23 UTC
So this is a somewhat sad situation.

Prior to my change in https://invent.kde.org/plasma/plasma-nm/-/commit/e85e1c0466b30b8d291d7765675044ad3c0fbf92, the code was ignoring bridges and VLANs and going into setDisconnectedIcon(), which was already wrong, since there was in fact an active connection.

However inside setDisconnectedIcon(), bridges and VLANs count as wired networks, so we'd end up in `setConnectionIcon(QStringLiteral("network-wired-available"));` And that icon happens to look like a monitor with a wire in the Breeze icon theme.

In e85e1c0466b30b8d291d7765675044ad3c0fbf92 I fixed this to return `network-wired-disconnected`, because this entire codepath is *supposed to* be for when there's no connection.

So changing that, which was harmless on its own, revealed that plasma-nm is ignoring connected bridges and VLANs, and going into setDisconnectedIcon() when it shouldn't. Previously this was OK-ish because the Breeze icon it gave you didn't *look* disconnected (even though it was still the semantically wrong icon to return).

I think the right course of action here is to not consider active bridges and VLANs to be disconnected in the first place. I'll see if I can fix that.
Comment 12 Zesko 2026-02-25 18:34:52 UTC
Thanks for the explanation!
Looking forward to the fix :)
Comment 13 Nate Graham 2026-02-25 18:55:53 UTC
Got it. Merge request incoming.
Comment 14 Bug Janitor Service 2026-02-25 18:58:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-nm/-/merge_requests/534
Comment 15 Antonio Rojas 2026-02-28 07:43:58 UTC
*** Bug 516827 has been marked as a duplicate of this bug. ***
Comment 16 Nate Graham 2026-03-02 16:02:28 UTC
Git commit cbba7600648cd8fbd14942f4ee238093a9c0c5eb by Nate Graham.
Committed on 02/03/2026 at 15:59.
Pushed by ngraham into branch 'master'.

Consider connected bridges and VLANs to be connections for icon purposes

Currently, bridges and VLANs are not considered real connections for
icon lookup purposes, so the code returns a disconnected icon.

Before 5ce273ac73725c1f2316c3ee9b950c34d87ac0df, the icon it returned
was `network-wired-available`, which doesn't *look* disconnected in the
Breeze icon theme, so nobody noticed or cared.

5ce273ac73725c1f2316c3ee9b950c34d87ac0df changed that to return
`network-wired-disconnected`, which people do notice and care about.

The underlying problem is bridge and VLAN connections not being considered
active connections for icon purposes; fixing that results in an icon
that is both semantically and visually correct when the only active
connections are bridges or VLANs.
FIXED-IN: 6.6.2

M  +9    -1    libs/connectionicon.cpp

https://invent.kde.org/plasma/plasma-nm/-/commit/cbba7600648cd8fbd14942f4ee238093a9c0c5eb
Comment 17 Nate Graham 2026-03-02 16:11:24 UTC
Git commit a6fad95ea41444fcdc227e7703c00ef77b97dfa6 by Nate Graham.
Committed on 02/03/2026 at 16:05.
Pushed by ngraham into branch 'Plasma/6.6'.

Consider connected bridges and VLANs to be connections for icon purposes

Currently, bridges and VLANs are not considered real connections for
icon lookup purposes, so the code returns a disconnected icon.

Before 5ce273ac73725c1f2316c3ee9b950c34d87ac0df, the icon it returned
was `network-wired-available`, which doesn't *look* disconnected in the
Breeze icon theme, so nobody noticed or cared.

5ce273ac73725c1f2316c3ee9b950c34d87ac0df changed that to return
`network-wired-disconnected`, which people do notice and care about.

The underlying problem is bridge and VLAN connections not being considered
active connections for icon purposes; fixing that results in an icon
that is both semantically and visually correct when the only active
connections are bridges or VLANs.
FIXED-IN: 6.6.2


(cherry picked from commit cbba7600648cd8fbd14942f4ee238093a9c0c5eb)

Co-authored-by: Nate Graham <nate@kde.org>

M  +9    -1    libs/connectionicon.cpp

https://invent.kde.org/plasma/plasma-nm/-/commit/a6fad95ea41444fcdc227e7703c00ef77b97dfa6
Comment 18 Nate Graham 2026-03-04 20:35:37 UTC
*** Bug 517071 has been marked as a duplicate of this bug. ***
Comment 19 kodirovsshik 2026-03-05 08:08:18 UTC
Either I'm stupid or there's something else going on. I've upgraded to 6.6.2 and I'm still having the disconnected icon in the tray until I enable my Ethernet connection instead of VLANs. Is anyone having the similar issues?
Comment 20 Zesko 2026-03-05 08:19:52 UTC
(In reply to kodirovsshik from comment #19)
> Either I'm stupid or there's something else going on. I've upgraded to 6.6.2
> and I'm still having the disconnected icon in the tray until I enable my
> Ethernet connection instead of VLANs. Is anyone having the similar issues?

Simple LAN / bridge works fine on Plasma 6.6.2, both show the connected icon.
Comment 21 slaecker 2026-03-05 08:21:49 UTC
(In reply to kodirovsshik from comment #19)
> Either I'm stupid or there's something else going on. I've upgraded to 6.6.2
> and I'm still having the disconnected icon in the tray until I enable my
> Ethernet connection instead of VLANs. Is anyone having the similar issues?

(In reply to Zesko from comment #20)
> (In reply to kodirovsshik from comment #19)
> > Either I'm stupid or there's something else going on. I've upgraded to 6.6.2
> > and I'm still having the disconnected icon in the tray until I enable my
> > Ethernet connection instead of VLANs. Is anyone having the similar issues?
> 
> Simple LAN / bridge works fine on Plasma 6.6.2, both show the connected icon.

Confirmed, but connecting to a VLAN still breaks the status icon
Comment 22 Nate Graham 2026-03-05 13:50:43 UTC
Apparently the fix worked for bridges, but not VLANs. I've renamed this bug report to just be about bridges, and let's track the remaining VLAN issue in Bug 516709.

Sorry for the inconvenience, everyone! Networking is hard. :(