Consider connected bridges and VLANs to be connections for icon purposes

Currently, bridges and VLANs are not considered real connections for
icon lookup purposes, so the code returns a disconnected icon.

Before 5ce273ac73725c1f2316c3ee9b950c34d87ac0df, the icon it returned
was `network-wired-available`, which doesn't *look* disconnected in the
Breeze icon theme, so nobody noticed or cared.

5ce273ac73725c1f2316c3ee9b950c34d87ac0df changed that to return
`network-wired-disconnected`, which people do notice and care about.

The underlying problem is bridge and VLAN connections not being considered
active connections for icon purposes; fixing that results in an icon
that is both semantically and visually correct when the only active
connections are bridges or VLANs.

BUG: 516712
FIXED-IN: 6.6.2


(cherry picked from commit cbba7600648cd8fbd14942f4ee238093a9c0c5eb)

Co-authored-by: Nate Graham <nate@kde.org>